Implementation of UserProfile Preferences and Related Entities (#12)
* Implement comprehensive UserProfile preference entities and DTOs

This commit implements a wide range of missing preference fields in the UserProfile entity, following the provided draft requirements and project conventions.

Key changes:
- Renamed SocialPreference to SocialPersonality (incorporating Big Five traits).
- Implemented lookup entities for Gender, Orientation, Relationship Status/Practices/Interests, Education Degree, Fluency, Vice Types, Pet Types, and Travel metrics.
- Added detailed fields to all preference entities (Location, Social, Gender, Relationship, Children, Age, Religion, Education, Language, Vice, Pets, Travel, Diet).
- Created sub-entities for Child, Language, Vice, and Pet collections.
- Updated corresponding DTOs and UserProfileDto mapping logic.
- Added validation constraints (@Min/@Max) where specified.
- Created repository interfaces for all new entities.
- Updated test datasets (user_profiles.xml) and added integration tests for all new repositories and the UserProfile graph.
- Fixed DbUnit compatibility issues with H2 Enums.

All tests passed successfully.

Co-authored-by: tsnash <9648342+tsnash@users.noreply.github.com>

* Refactor preference entities and DTOs based on feedback

- Removed redundant jakarta.validation.constraints imports from models and DTOs.
- Changed boolean fields to boxed Boolean in LocationPreference and GenderPreference to support nullability and correct JSON serialization.
- Updated GenderPreferenceDto to use getTrans() and added @JsonProperty("isTrans") on the getter to ensure correct Jackson mapping.
- Added a composite unique constraint on religion_name and branch_name in the Religion entity.
- Initialized all collections in entities and DTOs to empty lists/sets to prevent NullPointerExceptions.
- Fixed test references in UserProfileRepositoryTest to use the updated getUseLocal() getter.
- Verified all 109 tests pass.

Co-authored-by: ts